--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+hello_macro = { path = "hello_macro" }
+hello_macro_derive = { path = "hello_macro/hello_macro_derive" }
 tokio = { version = "1.44", features = ["full"] }
 futures = "0.3"
 trpl = "0.3.0"
